--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-joblib
+streamlit==1.26.0
+pandas==2.2.3
+numpy==1.26.2
+scikit-learn==1.3.0
+seaborn==0.12.2
+matplotlib==3.8.0
+joblib==1.3.2
